# pynalgo

./: .gitignore  Makefile  README.md  pyproject.toml  run_tests.sh  setup.cfg
docs/source/: conf.py  index.rst  user_guide.rst
pynalgo/: __init__.py
pynalgo/common_tools/: __init__.py  utilities_numba.py  utilities_numpy.py  utilities_primitives.py  utilities_typing.py
pynalgo/differentiation/: __init__.py  nodal_spectral.py
pynalgo/fft/: __init__.py  _kernels.py
pynalgo/integration/: __init__.py  quadrature.py
pynalgo/linear_algebra/: __init__.py  solvers.py
pynalgo/number_theory/: __init__.py  primes.py
pynalgo/rational/: __init__.py  aaa.py  derivatives.py
pynalgo/resample/: __init__.py  barycentric.py  barycentric_2d_split.py  barycentric_generalized.py  barycentric_nn.py  column.py  extrapolation.py  lagrange_uniform.py  lebesgue.py  neville.py
pynalgo/root_finding/: __init__.py  chebyshev_proxy.py
tests/: test_barycentric_2d_split.py  test_barycentric_generalized.py  test_barycentric_nn.py  test_chebyshev_proxy.py  test_common_tools.py  test_differentiation_nodal_spectral.py  test_fft.py  test_integration_quadrature.py  test_lagrange_uniform.py  test_linear_algebra.py  test_number_theory.py  test_rational.py  test_rational_derivatives.py  test_resample.py  test_special_functions.py  test_special_functions_grids.py  test_spectral.py  test_spectral_dct.py
usage/: chebyshev_grids.py  dim2_split_interp.py  finite_difference.py  function_block.py  grid_interchange.py  laplacian_s2_ps.py  planar_remap.py  rat_derivatives.py  wave_spherical_ps.py
(+17 files in other folders)
